# poocam

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: pyproject.toml  test_format_sensor_data.py  test_interpolater.py  test_json_wrapper.py  test_truncator.py
