[project]
name = "poocam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.0.0",
    "poocam-core",
    "poocam-web",
    "pytest>=8.4.2",
    "scipy-stubs==1.16.3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.3",
]

[tool.uv.workspace]
members = [
    "packages/poocam-core",
    "packages/poocam-web",
    "packages/poocam-pi",
    "tests",
]

[tool.uv.sources]
poocam-core = { workspace = true }
poocam-web = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
