[project]
name = "poocam-tests"
version = "0.1.0"
dependencies = [
    "pytest>=8.4.2",
    "poocam-core",
]

requires-python = ">=3.11"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
poocam-core = { workspace = true }
poocam-pi = { workspace = true }

